--- a/BooksStore/appsettings.json
+++ b/BooksStore/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookStore": "Data Source=BookStore.db"
+    "BookStore": "Host=localhost;Port=5432;Database=BookStoreDb;Username=postgres;Password=K8$fp2!LzQm@T1zQ7mT=@%K" 
   }
 }
